# jeopardy-map

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
analysis/: 10_evoc_toponymy.py  20_metadata_sweep.py  30_probes.py  35_round_within_category.py  36_dd_information_set.py  37_dd_llm_heuristic.py  38_title_map.py  40_temporal_drift.py  45_recycling_archive.py  50_evoc_regions.py  60_batch_robustness.py  70_report.py  75_blog_figures.py  80_treemap_page.py  common.py
pipeline/: 00_fetch_jeopardy.py  01_prepare_clues.py  02_embed_clues.py  03_reduce_umap.py  04_label_topics.py  05_visualize.py  config.py
